fix: Style horizontal scrollbar.

--- a/src/style/_extend.less
+++ b/src/style/_extend.less
@@ -1,6 +1,7 @@
 .atk-slim-scrollbar() {
   &::-webkit-scrollbar {
     width: 4px;
+    height: 4px;
     background: transparent;
   }
 
